--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,8 @@ jobs:
           command: docker login -u sudaiss -p sudais22
       - run:
           name: Push Docker Image
-          command: docker push sudais/finals:sudais
+          command: docker tag 4d99c341a8fd sudais
+          command: docker push sudais
 workflows:
   version: 2
   build-master:
