--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,13 +10,13 @@ jobs:
       - setup_remote_docker
       - run:
           name: Build Docker image
-          command: docker build -t su:sudais .
+          command: docker build -t final:final .
       - run:
           name: Login Dockerhub
           command: docker login -u sudaiss -p sudais22
       - run:
           name: Push Docker Image
-          command: docker push d4b081def896/su:sudais
+          command: docker push final/final
 workflows:
   version: 2
   build-master:
